Fixed diameter error